--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=consilai
 # PostgreSQL connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/consilai
 spring.datasource.username=postgres
-spring.datasource.password=Cordoba$20
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
